Corrected alignment for comment and like icons

--- a/frontend/src/styles/output.css
+++ b/frontend/src/styles/output.css
@@ -1045,6 +1045,10 @@ video {
   align-items: flex-start;
 }
 
+.items-end {
+  align-items: flex-end;
+}
+
 .items-center {
   align-items: center;
 }
@@ -1358,6 +1362,14 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-light-default\/70 {
+  background-color: rgb(252 251 254 / 0.7);
+}
+
+.bg-light-default\/80 {
+  background-color: rgb(252 251 254 / 0.8);
 }
 
 .bg-\[url\(\'\.\.\/assets\/images\/Home_bg\.png\'\)\] {
